PP-362 #comment fixed team detail view on mobile

--- a/sass/_minwidth0-479.scss
+++ b/sass/_minwidth0-479.scss
@@ -100,6 +100,11 @@ ul.ui-tabs-nav li.ui-state-default:last-child {
 	margin-bottom: 1rem;
 }
 
+// PP-362 - pedersenandpartners.com: fix team detail view on nobile
+
+.group-team-info-wrapper.field-group-div {
+    clear: both;
+}
 
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 
